--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="./css/styles.css"/>
     <title>Homework 07</title>
 </head>
 <body>
@@ -53,15 +53,20 @@
     <!-- task05 -->
     <input type="text" placeholder="Ваше имя?" id="name-input" />
     <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
-
-
+    <!-- task06 -->
+    <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
+    <!-- task07 -->
+    <br />
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
 
     <!-- <script type="module" src="./js/task01.js"></script> -->
     <!-- <script type="module" src="./js/task02.js"></script>  -->
     <!-- <script type="module" src="./js/task03.js"></script> -->
     <!-- <script type="module" src="./js/task04.js"></script> -->
-    <script type="module" src="./js/task05.js"></script>
-    <script type="module" src="./js/task06.js"></script>
+    <!-- <script type="module" src="./js/task05.js"></script> -->
+    <!-- <script type="module" src="./js/task06.js"></script> -->
     <script type="module" src="./js/task07.js"></script>
     <script type="module" src="./js/task08.js"></script>
 
