--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
     <br />
     <span id="text">Абракадабра!</span>
 
-    <!-- <script type="module" src="./js/task01.js"></script> -->
-    <!-- <script type="module" src="./js/task02.js"></script>  -->
-    <!-- <script type="module" src="./js/task03.js"></script> -->
-    <!-- <script type="module" src="./js/task04.js"></script> -->
-    <!-- <script type="module" src="./js/task05.js"></script> -->
-    <!-- <script type="module" src="./js/task06.js"></script> -->
+    <script type="module" src="./js/task01.js"></script>
+    <script type="module" src="./js/task02.js"></script> 
+    <script type="module" src="./js/task03.js"></script>
+    <script type="module" src="./js/task04.js"></script>
+    <script type="module" src="./js/task05.js"></script>
+    <script type="module" src="./js/task06.js"></script>
     <script type="module" src="./js/task07.js"></script>
     <script type="module" src="./js/task08.js"></script>
 
