--- a/index.html
+++ b/index.html
@@ -60,7 +60,16 @@
     <input id="font-size-control" type="range" />
     <br />
     <span id="text">Абракадабра!</span>
+    <!-- task08 -->
+    <div id="controls">
+        <input type="number" min="0" max="100" step="1" />
+        <button type="button" data-action="render">Создать</button>
+        <button type="button" data-action="destroy">Очистить</button>
+    </div>
+    
+    <div id="boxes"></div>
 
+    <!-- scripts -->
     <script type="module" src="./js/task01.js"></script>
     <script type="module" src="./js/task02.js"></script> 
     <script type="module" src="./js/task03.js"></script>
